# ghidra-ai-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: getting-started.md
examples/gta-sa/: ghidra-bridge.yaml
ghidra_ai_bridge/: __init__.py  __main__.py  address_map.py  asm.py  cli.py  config.py  init_wizard.py  query.py  source_types.py
ghidra_ai_bridge/exporters/: __init__.py  runner.py
ghidra_ai_bridge/patterns/: __init__.py  defaults.py
tests/: test_address_map.py  test_config.py  test_query.py
